--- a/Mnist/KNN_with_lsh.ipynb
+++ b/Mnist/KNN_with_lsh.ipynb
@@ -525,7 +525,7 @@
         "id": "n8VZlmtZFzMY"
       },
       "source": [
-        "We are doing KNN with locality-sensitive hasing, where our hash function is H(x) and it is given by and operation of some number (in our case 3) hash functions h_i(x), given by formula h_i(x)=sgn(x*p),where * means dot product and p is some random vector."
+        "We are doing KNN with locality-sensitive hasing, where our hash function is H(x) and it is given by logical and operation of some number (in our case 3) hash functions h_i(x), given by formula h_i(x)=sgn(x*p),where * means dot product and p is some random vector."
       ]
     },
     {
